--- a/demo/static/qui-enhanced.html
+++ b/demo/static/qui-enhanced.html
@@ -9,6 +9,7 @@
   <link href="css/qwebirc.css" rel="stylesheet">
   <link href="css/jqueryui_icons.css" rel="stylesheet">
   <script>window.ircoptions = {stylesheet: 'css/modifiablecss.mcss'}</script>
+  <script src="//cdn.jsdelivr.net/mootools/1.4.5/mootools-core-1.4.5-full-nocompat.js"></script>
   <script src="js/dist/qwebirc-0.93dev.js"></script>
   <script>
     var ui = new qwebirc.ui.Interface("ircui", qwebirc.ui.QUI, {
