Fix Twisted demo and update readme
Fix for https://github.com/megawac/qwebirc-enhancements/issues/6

--- a/demo/twisted/static/qui-enhanced.html
+++ b/demo/twisted/static/qui-enhanced.html
@@ -19,7 +19,8 @@
       "dynamicBaseURL": "",
       "staticBaseURL": "",
       "networkName": "GameSurge",
-      "baseURL": ""
+      "baseURL": "",
+      "node": false
     });
   </script>
 </head>
