--- a/demo/twisted/static/qui-enhanced.html
+++ b/demo/twisted/static/qui-enhanced.html
@@ -12,13 +12,13 @@
   <script src="js/dist/qwebirc-0.93dev.js"></script>
   <script>
     var ui = new qwebirc.ui.Interface("ircui", qwebirc.ui.QUI, {
-      "appTitle": "GameSurge Web IRC",
-      "networkServices": ["AuthServ!AuthServ@Services.GameSurge.net", "ChanServ!ChanServ@Services.GameSurge.net"],
+      "appTitle": "Freenode.net Web IRC",
+      "networkServices": [/*Haven't checked place em here*/],
       "initialChannels": ["#tf2newbiemix","#tf2mix","#tf2.pug.na","#tf2.pug.nahl","#jumpit","#tf2scrim","#tftv"],
       "loginRegex": /^I recogni[sz]e you/,
       "dynamicBaseURL": "",
       "staticBaseURL": "",
-      "networkName": "GameSurge",
+      "networkName": "Freenode.net",
       "baseURL": "",
       "node": false
     });
