Node demo is back to gamesurge

--- a/demo/twisted/static/qui-enhanced.html
+++ b/demo/twisted/static/qui-enhanced.html
@@ -14,7 +14,7 @@
     var ui = new qwebirc.ui.Interface("ircui", qwebirc.ui.QUI, {
       "appTitle": "Freenode.net Web IRC",
       "networkServices": [/*Haven't checked place em here*/],
-      "initialChannels": ["#tf2newbiemix","#tf2mix","#tf2.pug.na","#tf2.pug.nahl","#jumpit","#tf2scrim","#tftv"],
+      "initialChannels": ["#qwebirc"],
       "loginRegex": /^I recogni[sz]e you/,
       "dynamicBaseURL": "",
       "staticBaseURL": "",
