--- a/demo/node/static/index.html
+++ b/demo/node/static/index.html
@@ -4,7 +4,7 @@
   <base>
   <title>WebIRC Using QWebirc V0.93-dev</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/qwebirc.css" rel="stylesheet">
@@ -15,14 +15,20 @@
     var ui = new qwebirc.ui.Interface("ircui", qwebirc.ui.QUI, {
       "appTitle": "GameSurge Web IRC",
       "networkServices": ["Services.GameSurge.net"],
-      "initialChannels": ["#tf2newbiemix","#tf2mix","#tf2.pug.na","#tf2.pug.nahl","#jumpit","#tf2scrim","#tftv"],
       "loginRegex": /^I recogni[sz]e you/,
       "dynamicBaseURL": "",
       "staticBaseURL": "",
       "networkName": "GameSurge",
       "baseURL": "",
       "node": true,
-      "debug": true
+      "debug": true,
+      "settings": {
+        "channels": ["#tf2newbiemix","#tf2mix","#tf2.pug.na","#tf2.pug.nahl","#jumpit","#tf2scrim","#tftv"],
+        "nickname": "",
+        "username": "",
+        "password": "",
+        "auth": false
+      }
     });
   </script>
 </head>
