--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -20,14 +20,14 @@
     <div id="ircui"></div>
   </div>
   <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/should/should.js"></script>
 
   <script>
     mocha.setup('bdd')
     mocha.reporter('html');
   </script>
 
-  <script src="util.js"></script>
+  <script src="utils.js"></script>
   <script src="irc-colours.js"></script>
   <script src="irc-parser.js"></script>
   <script src="url-format.js"></script>
