--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -20,7 +20,7 @@
     <div id="ircui"></div>
   </div>
   <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../node_modules/should/should.js"></script>
+  <script src="../node_modules/expect.js/index.js"></script>
 
   <script>
     mocha.setup('bdd')
