--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -12,7 +12,7 @@
     <script src="../dist/js/plugins.js"></script>
     <script src="../dist/js/templates.js"></script>
     <script src="../dist/js/qwebirc.js"></script>
-    <script src="../dist/js/app.js"></script>
+    <!-- <script src="../dist/js/app.js"></script> -->
 </head>
 <body>
   <div id="mocha"></div>
