--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -29,11 +29,12 @@
     mocha.reporter('html');
   </script>
 
+  <script src="elements.from.js"></script>
   <script src="monkey-patches.js"></script>
   <script src="utils.js"></script>
-  <script src="irc-styles.js"></script>
   <script src="irc-parser.js"></script>
   <script src="url-format.js"></script>
+  <script src="irc-styles.js"></script>
   <script src="ui.js"></script>
 
   <script>
