Update utils and add tests

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -35,6 +35,8 @@
   <script src="irc-parser.js"></script>
   <script src="url-format.js"></script>
   <script src="irc-styles.js"></script>
+
+  <script src="qwebirc.js"></script>
   <script src="ui.js"></script>
 
   <script>
