Rewrite irc-tracker (on-hold)

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -36,6 +36,8 @@
   <script src="url-format.js"></script>
   <script src="irc-styles.js"></script>
 
+  <script src="irc-tracker.js"></script>
+
   <script src="qwebirc.js"></script>
   <script src="ui.js"></script>
 
