Escape text before rendering

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -29,8 +29,8 @@
     mocha.reporter('html');
   </script>
 
-  <script src="elements.from.js"></script>
-  <script src="monkey-patches.js"></script>
+  <script src="Elements.from.js"></script>
+  <script src="Monkey-patches.js"></script>
   <script src="utils.js"></script>
   <script src="irc-parser.js"></script>
   <script src="url-format.js"></script>
